@@ -1,4 +1,4 @@
-DIST kramdown-0.14.2.gem 278528 SHA256 4351344ebf3b986990341987320d076486d5b1b63032bdf5bfb5eb10d1a43eb7 SHA512 07f3f3b300497196463f660d3d5ec3548c91df79592320e8469a475ced70df21da921d0b00daa1410a9ee9d3ebc0bc4aa12338eabc76d1303264385d6e6f86d2 WHIRLPOOL 473669c9267ed914407214fee7c4c16cf058be4bed5cbef498728578f57fe8550fe2cf7b57889e644a269442560fb2b7b9771f16e3b0c254b20b3760139344cd
-EBUILD kramdown-0.14.2.ebuild 1071 SHA256 dd69cd7d19100dd51f1bc7e6fa242989ce947519f0cee47d50655cf4f76482d9 SHA512 d0e69b1bf64600faccff58c5eb19f918602f2998d48ccdb7ce48c934316cbc85050cbf3fec24860a63c926ae78ce68dc752e6adcf008ee2d5c8f645ffeaee3f6 WHIRLPOOL d0b56456eb38f5ea5e0ba2e3d8d2c90cb454ddb261cc83c7588671b702ddb432a285b9de137920f6de218e2613eebbd3e2692db26fb61d865568949ff3625263
-MISC ChangeLog 180 SHA256 8e7be879d6579b1cb86f0b95483a0d0f022f585f76ac96befc8471c00406a5a2 SHA512 15e17c1a1ed0a945c6349bcd585bf4f6c1ca06d38cd23ed7601c4c39e8b6e7cd55e3b4f8953c53148e371eafc6f8a37ff4b3ca5e2db049541f95e6cae34fbb4b WHIRLPOOL df81683c731f24826f1c59b68c74c43ea499a4930b545d74528d1264793d2e69be426b013517d9ebd5167dd2dd8369bf1b9e2ec34d1339659ce92df93491132f
+DIST kramdown-1.0.1.gem 212480 SHA256 deb3932941fb6fc1a3b3f50aeef9d0d370d200db4c28ffbafabbe2bf382014d1 SHA512 32e258d2d335af6c6ec49c04d511671dc2ada9f974bee8a04190201b633dda184b1184e5eac1362458a2e564d63622c303bb0126cb039d42ac00c0d7854f2bdd WHIRLPOOL 80f0d53082c760954e4e9fe28e1a6ad98be6f82c02e760dbe9fd2c3a814654ade38f8ff58b651d0d2143d74cf678cc792d8043d0e8e92c02fe8ba56b45442ed5
+EBUILD kramdown-1.0.1.ebuild 1075 SHA256 0011526eebb9bbb3bb9e70cdfda7b6cbaafdb0c5446652f5c769adb736225bd5 SHA512 eff3d9db0c5aefeb616ff8570ac82f430fe052a0cb15f581dc785542078b1940abe56eadf6bdd8c508a7207ee0b084d8d753eebc34b84d4c824181660074ff89 WHIRLPOOL 184128400ac19de2a2ce3984c8df7af4ef3937f88e9e739bf2906286a6952f80160d7e29d778593eff4d9489c5d0613050a439c88bd3af1e461321c5293e23d6
+MISC ChangeLog 378 SHA256 f50b5b56d86f5c61a690e7222001a45d1909d475f6b90846af3b8aa6e5cfb7b3 SHA512 b6f269011f71a210971de78ddf3e4649115e56eb0b81ceb046a62c4ebb42f0a7af0a06750ee422b156ce8998d329d0d919f1dfee7f4547a202a31b9a1929865c WHIRLPOOL 893c2b25bc966e9b46b866e7c994d9ca676d7bafb9ccbe8c3c2d51543826b0473020612df8f12a92af4cac314be21bcab0b1811cd672c085e7c1d1fd20eeec73
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
