@@ -1,3 +1,9 @@
+*kramdown-1.0.1 (12 Mar 2013)
+
+  12 Mar 2013; Manuel Rüger <gentoo@rueg.eu> +kramdown-1.0.1.ebuild,
+  -kramdown-0.14.2.ebuild:
+  dev-ruby/kramdown: Version bump, license changed from GPL-3 to MIT
+
 *kramdown-0.14.2 (16 Feb 2013)
 
   16 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +kramdown-0.14.2.ebuild,
